Add npc avatar generation

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -348,7 +348,7 @@ beta {
 
 .menu-npc.open {
   max-height: 300px;
-  max-width: 500px;
+  max-width: 600px;
   color: white;
   padding: 20px;
   transition: 0.5s ease-in;
@@ -396,4 +396,12 @@ beta {
 
 .icon-user {
   padding: 0px 10px;
+}
+
+.avatar {
+  height: 125px;
+  width: 125px;
+  margin-right: 15px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
